Add role for user and getUsersByRole end-point (#59)
* Fix getUsersByRole problem

Add open api inquiry service

WARNING: getUsersById need to be fixed!

Change role type from enum to string in sql

WARNING: getUsersById need to be fixed!

Add liquibase config for user role

Add open api config for user role

Add start config for user role

* Change performance tests

Add e2e tests for new end-points

Add test for user-service-app
