# user-profile-app/src/main/java/com/iprody/userprofileservice/dto/UserDto.java
@@ -2,7 +2,9 @@
 package com.iprody.userprofileservice.dto;
 
 
+import com.iprody.userprofileservice.models.Role;
 import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
@@ -19,7 +21,10 @@ public class UserDto {
     private String firstName;
     @Size(max = 50, message = "Lastname should not be more then 50 characters")
     private String lastName;
+    @NotNull
     @Email(message = "Invalid email format")
     private String email;
     private Long userContactId;
+    @NotNull
+    private Role userRole;
 }
